--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_PORT = 8888
-APP_HOST = http://localhost
-MYSQL_HOST = localhost
+APP_HOST = http://120.25.250.241
+MYSQL_HOST = 120.25.250.241
 MYSQL_PORT = 3306
 MYSQL_DATABASE = shop
 MYSQL_USER = root
